# aihw-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  llms-full.txt  llms.txt  pyproject.toml
.claude/agents/: aihw-mcp-expert.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: codeql.yml  publish.yml  release.yml  test.yml
examples/: claude_desktop_config_all_five.json  claude_desktop_config_local.json  demo_prompts.md
src/aihw_mcp/: __init__.py  cache.py  catalog.py  client.py  curated.py  discovery.py  models.py  parquet_cache.py  parsing.py  server.py  shaping.py
src/aihw_mcp/data/curated/: CANCER_INCIDENCE_MORTALITY.yaml  GRIM_DEATHS.yaml  HEALTH_EXPENDITURE.yaml  MORT_GEOGRAPHY.yaml  PUBLIC_HOSPITALS.yaml  YOUTH_JUSTICE_DETENTION.yaml
tests/: conftest.py  test_cache.py  test_client.py  test_concurrency.py  test_curated.py  test_customer_flows.py  test_df_cache.py  test_discovery.py  test_edge_data.py  test_edge_inputs.py  test_integration.py  test_parquet_cache.py  test_parsing.py  test_period_axis.py  test_resilience.py  test_server_validation.py  test_shaping.py  test_top_n.py
tests/fixtures/: acim_head.csv  grim_head.csv  hexp_head.csv  mort_head.csv  pubhosp_head.csv  youthj_head.csv
