[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aihw-mcp"
version = "0.4.13"
description = "MCP server for Australian Institute of Health and Welfare data. Plain-English access to mortality (GRIM/MORT), cancer incidence, health expenditure, youth justice detention, and the public hospitals register."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Harry Vass" }]
keywords = [
    "mcp", "model-context-protocol", "claude", "fastmcp",
    "aihw", "health", "healthcare", "mortality", "cancer", "public-health",
    "australia", "australian", "public-data", "government-data", "data-gov-au",
    "health-tech", "epidemiology",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Typing :: Typed",
]
dependencies = [
    "fastmcp>=2.0,<4",
    "httpx>=0.27",
    "pydantic>=2.7",
    "rapidfuzz>=3.9",
    "pandas>=2.2,<3",
    "openpyxl>=3.1",
    "pyarrow>=15",
    "aiosqlite>=0.20",
    "PyYAML>=6.0",
    "aus-identity>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.scripts]
aihw-mcp = "aihw_mcp.server:main"

[project.urls]
Homepage = "https://github.com/Bigred97/aihw-mcp"
Documentation = "https://github.com/Bigred97/aihw-mcp#readme"
Repository = "https://github.com/Bigred97/aihw-mcp"
Issues = "https://github.com/Bigred97/aihw-mcp/issues"
Changelog = "https://github.com/Bigred97/aihw-mcp/blob/main/CHANGELOG.md"
PyPI = "https://pypi.org/project/aihw-mcp/"

[tool.hatch.build.targets.wheel]
packages = ["src/aihw_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["live: hits real data.gov.au (downloads AIHW CSV files)"]
addopts = "-m 'not live'"
testpaths = ["tests"]
pythonpath = ["src"]
